# QuadriFlow

./: .clang-format  .gitignore  .gitmodules  AdjacentMatrix.cpp  AdjacentMatrix.h  CMakeLists.txt  CompareKey.h  DisajointTree.h  MergeVertex.cpp  MergeVertex.h  Optimizer.cpp  Optimizer.cu  Optimizer.h  Optimizers.cpp  Parametrize.sln  Parametrize.vcxproj  Parametrizer.cpp  Parametrizer.h  README.md  config.h  dedge.cpp  dedge.h  dset.h  field_math.h  flow.h  glDraw.cpp  glDraw.h  hierarchy.cpp  hierarchy.h  loader.cpp  loader.h  main.cpp  mcmf.cpp  mcmf.h  post-solver.hpp  serialize.h  subdivide.cpp  subdivide.h  tbb_common.h
3rd/MapleCOMSPS_LRB/core/: Solver.h  SolverTypes.h
3rd/Open-WBO-2.0/code/: Encoder.h  FormulaPB.h  LICENSE  Makefile  MaxSAT.cc  MaxSAT.h  MaxSATFormula.h  MaxSAT_Partition.cc  MaxSAT_Partition.h  ParserMaxSAT.h  depend.mk
3rd/Open-WBO-2.0/code/algorithms/: Alg_LinearSU.cc  Alg_LinearSU.h  Alg_MSU3.cc  Alg_MSU3.h  Alg_PartMSU3.cc  Alg_WBO.cc
3rd/Open-WBO-2.0/code/encodings/: Enc_CNetworks.h  Enc_GTE.h  Enc_MTotalizer.h  Enc_SWC.cc  Enc_Totalizer.cc  Encodings.h
3rd/Open-WBO-2.0/code/graph/: Graph.cc  Graph.h  Graph_Algorithms.cc  TreeNode.h
3rd/Open-WBO-2.0/code/solvers/MapleCOMSPS_LRB/simp/: Main.cc
3rd/Open-WBO-2.0/code/solvers/glucose4.0/core/: Solver.h  SolverTypes.h
3rd/Open-WBO-2.0/code/solvers/glucose4.0/mtl/: Alloc.h  Vec.h  template.mk
3rd/Open-WBO-2.0/code/solvers/glucose4.0/parallel/: ParallelSolver.cc
3rd/Open-WBO-2.0/code/solvers/glucose4.0/simp/: SimpSolver.cc  (+1 more)
3rd/Open-WBO-LSU/code/: Encoder.cc  INSTALL  Main.cc  MaxSATFormula.cc  MaxTypes.h  ParserPB.cc  ParserPB.h  README  open-wbo
3rd/Open-WBO-LSU/code/algorithms/: Alg_OLL.cc  Alg_OLL.h  Alg_PartMSU3.h  Alg_WBO.h
3rd/Open-WBO-LSU/code/encodings/: Enc_CNetworks.cc  Enc_GTE.cc  Enc_Ladder.cc  Enc_Ladder.h  Enc_MTotalizer.cc  Enc_SWC.h  Enc_Totalizer.h  Encodings.cc
3rd/Open-WBO-LSU/code/graph/: Graph_Communities.cc  Graph_Communities.h  NodeHeap.h
3rd/Open-WBO-LSU/code/solvers/glucose4.0/: Changelog
3rd/lemon-1.3.1/lemon/: arg_parser.cc
Parametrize/Parametrize.xcodeproj/: project.pbxproj
Parametrize/Parametrize.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Parametrize/Parametrize.xcodeproj/project.xcworkspace/xcuserdata/jingwei.xcuserdatad/: UserInterfaceState.xcuserstate
Parametrize/Parametrize.xcodeproj/xcuserdata/jingwei.xcuserdatad/xcschemes/: Parametrize.xcscheme  xcschememanagement.plist
bins/: quadriflow-osx
cmake/: glmConfigVersion.cmake
src/: Optimizer.cu  adjacent-matrix.cpp  config.hpp  curvature.cpp  curvature.hpp  dedge.cpp  dedge.hpp  disajoint-tree.hpp  dset.hpp  field-math.hpp  flow.hpp  gldraw.cpp  gldraw.hpp  hierarchy.cpp  hierarchy.hpp  loader.cpp  loader.hpp  localsat.cpp  localsat.hpp  main.cpp  merge-vertex.cpp  optimizer.cpp  optimizer.hpp  parametrizer-flip.cpp  parametrizer-int.cpp  parametrizer-mesh.cpp  parametrizer-scale.cpp  parametrizer-sing.cpp  parametrizer.cpp  parametrizer.hpp  post-solver.cpp  post-solver.hpp  serialize.hpp  subdivide.cpp  subdivide.hpp
tbb/: tbb.lib  tbb_static.lib
tools/: analyzer  analyzer.cpp  compile.sh  run_parallel.py  script.py
(+16 files in other folders)
